2006-07-19  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/x/XGraphics.java
	(drawImage(Image,int,int,int,int,int,int,int,int,ImageObserver)):
	Fixed ordering of parameters.

2006-07-18  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/lang/management/MemoryMXBeanImpl.java:
	(MemoryMXBeanImpl()): Implemented.
	(ListenerData): New private class.
	(addNotificationListener(NotificationListener,
	NotificationFilter, Object)): Implemented.
	(getNotificationInfo()): Likewise.
	(removeNotificationListener(NotificationListener)):
	Likewise.
	(removeNotificationListener(NotificationListener,
	NotificationFilter, Object)): Likewise.
	
2006-07-18  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/x/XFontPeer.java
	(encodeFont): Be more flexible with font sizes.
	(validSize): New helper method.
	* gnu/java/awt/peer/x/XGraphics.java
	(drawImage(Image,int,int,int,int,int,int,int,int,ImageObserver)):
	Implemented.
	(drawImage(Image,int,int,int,int,int,int,int,int,Color,ImageObserver)):
	Implemented.
	* gnu/java/awt/peer/x/XImage.java
	(properties): New field.
	(getProperty): Implemented.
	* resource/gnu/java/awt/peer/x/fonts.properties:
	Added copyright header. Fixed font size field.

2006-07-18  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/image/BandedSampleModel.java
	(createDataBuffer): New method override,
	* java/awt/image/ByteLookupTable.java
	(ByteLookupTable(int, byte[][])): Create new array to hold references,
	(ByteLookuptable(int, byte[])): Check for null array,
	* java/awt/image/ComponentSampleModel.java
	(createDataBuffer): Removed unnecessary braces,
	(getSample): Check (x, y) is within bounds,
	* java/awt/image/ShortLookupTable.java
	(ShortLookupTable(int, short[][])): Create new array to hold references,
	(ShortLookupTable(int, short[])): Check for null array,
	(getTable): Added API docs,
	(lookupPixel): Source reformatting.

2006-07-18  Tania Bento  <tbento@redhat.com>
	
	* java/awt/GridLayout.java