@@ -1,5 +1,5 @@
 # classpath.security
-#    Copyright (C) 2002 Free Software Foundation, Inc.
+#    Copyright (C) 2002, 2006 Free Software Foundation, Inc.
 # 
 # This file is part of GNU Classpath.
 # 
@@ -41,3 +41,7 @@ security.provider.2=gnu.javax.crypto.jce.GnuCrypto
 security.provider.3=gnu.javax.crypto.jce.GnuSasl
 security.provider.4=gnu.javax.net.ssl.provider.Jessie
 security.provider.5=gnu.javax.security.auth.callback.GnuCallbacks
+
+# The VM-wide default callback handler class name.  MUST be a subclass of
+# javax.security.auth.callback.CallbackHandler
+auth.login.defaultCallbackHandler=gnu.javax.security.auth.callback.DefaultCallbackHandler
